@@ -8,7 +8,7 @@ jobs:
       matrix:
         python-version: [3.9, "3.10", "3.11"]
         numpy: ["numpy>=1.20.3,<2.0.0"]
-        pandas: ["pandas==2.0.2", ]
+        pandas: ["pandas==2.0.2", "pandas==2.1.0rc0" ]
         pint: ["pint>=0.21.1", "pint==0.22"]
 
     runs-on: ubuntu-latest
